refactoring dependency injection
